--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
             <h4>Lifts</h4>
             <p>
                 Custom lifts are the most complex feature I've added. The default lifts are passable, but I have managed to improve on their asethetics significantly. Custom
-                lifts are loaded with Unity's asset bundle system, and can contain script data to define behavio1r on creation. The default static model towers have been repalced
+                lifts are loaded with Unity's asset bundle system, and can contain script data to define behavior on creation. The default static model towers have been repalced
                 with high detail models that contain accurate sheaves. The towers adapt to the terrain with a 3d tower placement algorithm, allowing variable heights on towers.
                 When the towers interact with ski runs, I've added padding to the towers. I've added sag to the cables that the cars run, realisticly modelled with caternery 
                 curves. The cars enter the stations instead of immediately turning around, and for the detachable lifts, the vehicles slow down in the station like they would
