Added another screenshot for lexica

--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
             align-items: center;
             grid-template-areas: 
             "content picture1"
-            /* "content picture2"
-            "content picture3"
+            "content picture2"
+            /* "content picture3"
             "content picture4" */
             "example example"
         }
@@ -358,7 +358,7 @@
         </div>
         <h3>Lexica</h3>
         <div class="lexica-content">
-        <div class="lexica-text-content">
+        <div class="lexica-text-content" style="grid-area: content;">
         <h4>Background and Goals</h4>
         <p>
             Constructed languages (conlangs for short) are made up languages, typically for a work of literature, such as Sindarin, Quenya, other languages by Tolkein, Klingon,
@@ -417,6 +417,10 @@
         <div>
             <img src="media/ps10.PNG">
             <p>The program menu, where sound change code is written</p>
+        </div>
+        <div>
+            <img src="media/ps13.PNG">
+            <p>The spreadsheet interface showcasing formatting, resizable<br>columns, and mergable cells</p>
         </div>
         <div class="lexica-example">
             <div style="grid-area:header;padding:0px">
