Added a another screenshot for the swerve

--- a/index.html
+++ b/index.html
@@ -639,7 +639,14 @@ end</pre>
                 <p>V12 (the final one) is much more compact, and, in Fusion 360 simulations, rated to 2000N.</p>
             </div>
             <div>
-                
+                <img src="media/ps14.PNG">
+                <p>
+                    The central shaft area is quite complicated. The module needs an encoder to read wheel positions (something absent
+                    from the earlier versions) which must be aligned along the axis of rotation. Power must also be sent to the wheel,
+                    which must pass through the center shaft so the module can rotate. Therefore, I had to make the two shafts concentric.
+                    The middle shaft had a magnet for the encoder pressed into it, and the outer shaft is a hex shaft with gears on it,
+                    attached with some very small bearings.
+                </p>
             </div>
         </div>
     </section>
