Added 2 screenshots for robotics CAD

--- a/index.html
+++ b/index.html
@@ -198,6 +198,15 @@
             font-family: 'Fira Code', monospace;
             font-size: 16px;
         }
+
+        .pic-grid {
+            display: grid;
+            align-items: start;
+            padding-left: 0px;
+            padding-right: 0px;
+            grid-template-columns: 50% 50%;
+
+        }
     </style>
 
     <style>
@@ -610,6 +619,16 @@ end</pre>
         </p>
         <h4>CAD for robotics</h4>
         <p>None of these models are entirely my own, but the ones I show have the vast majority of the work done by me.</p>
+        <div class="pic-grid">
+            <div>
+                <img src="media/ps15.PNG">
+                <p>This is a concept I quickly made for an arm for the 2023 FRC game, Charged Up</p>
+            </div>
+            <div>
+                <img src="media/ps16.PNG">
+                <p>This was our full robot plan for the 2022 FRC game, Rapid React. All of that except for the intake was mostly my work.</p>
+            </div>
+        </div>
         <h3>Swerve Module</h3>
         <p>
             My senior project is a swerve module for a swerve drive. A swerve drive a drivetrain system with 4 wheels, each indepedently powered 
